--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -33,7 +33,7 @@
     --color-background: var(--vt-c-black);
 
     --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
+    --color-border-hover: var(--vt-c-accent);
 
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--vt-c-text-dark-2);
