--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -51,6 +51,7 @@
   flex-direction: column;
   gap: 0.5rem;
   padding: 1rem;
+
 }
 
 .content__list-item {
@@ -59,13 +60,14 @@
   border-radius: 1rem;
 }
 
-.carousel__list-body li {
-  animation: fadeIn 0.5s ease-in-out;
+.content__list-body .content__list-item {
+  animation: fadeIn 1s ease-in-out;
 }
 
 /* carusel */
 .content__carousel {
   display: flex;
+  gap: 1rem;
   flex-direction: column;
   align-items: center;
   overflow: hidden;
@@ -76,13 +78,10 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 2rem;
-  transition: transform 0.5s ease;
+  gap: 1rem;
 }
 
-.carousel__image-container {
-  margin: 2rem 1rem;
-}
+.carousel__image-container {}
 
 .carousel__image {
   width: 100%;
@@ -90,7 +89,6 @@
   object-fit: contain;
   border: 2px solid transparent;
   border-radius: 1rem;
-  transition: all 0.5s ease-in-out;
 }
 
 .carousel__image.selected {
@@ -108,6 +106,7 @@
   border: 1px solid var(--color-border);
   padding: 1rem;
   border-radius: 1rem;
+  transition: all 0.5s ease-in-out;
 }
 
 .carousel__button:hover,
@@ -131,4 +130,21 @@
     padding: 0.75rem;
     border-radius: 0.75rem;
   }
+}
+
+/*  */
+.carousel__image-container {
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel__image-container.slide-left {
+  transform: translateX(-100%);
+}
+
+.carousel__image-container.slide-right {
+  transform: translateX(100%);
+}
+
+.carousel__image-container.visible {
+  transform: translateX(0);
 }
